--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,7 @@ body {
     align-items: center;
     background: linear-gradient(to right, rgb(255, 255, 255), rgb(121, 248, 89));
     border-radius: 20px;
-    height: 3rem;
+    height: 0.5rem;
 
 }
 
@@ -286,8 +286,116 @@ body {
     border-radius: 20px;
     padding: 1rem;
     margin: 1rem 0;
+    max-width: 500px;
 }
 
 img {
     max-width: 450px;
+}
+
+.post_img {
+    text-align: center;
+}
+
+.page_button {
+    width: 70px;
+    height: 35px;
+    padding: 2px;
+    margin: 1rem;
+    background-color: #79f859;
+    color: black;
+    font-weight: 600;
+    font-size: medium;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.page_button:hover {
+    opacity: 0.8;
+}
+
+.comments_button {
+    width: 9rem;
+    text-align: center;
+    padding: 0.2rem;
+    border: 4px solid #79f859;
+    border-radius: 10px;
+    background-color: #79f859;
+    opacity: 0.8;
+}
+
+.comments_button:hover {
+    cursor: pointer;
+    opacity: 1;
+}
+
+.showpost_container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.comments_card {
+    border: 5px solid #79f859;
+    border-radius: 20px;
+    padding: 1rem;
+    margin: 1rem 0;
+    max-width: 500px;
+}
+
+.comments {
+    display: flex;
+    flex-direction: column;
+}
+
+.add_comment {
+    border: 3px solid #79f859;
+    width: fit-content;
+    padding: 0.2rem;
+    margin-top: 1rem;
+    border-radius: 10px;
+    background-color: #79f859;
+
+}
+
+.add_comment:hover {
+    opacity: 0.8;
+    cursor: pointer;
+}
+
+.comment_text input {
+    height: 50px;
+    width: 700px;
+    background: transparent;
+    border: none;
+    outline: none;
+    color: #797979;
+    font-size: 19px;
+}
+
+.comment_label {
+    font-size: large;
+    font-style: oblique;
+}
+
+.back_container {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 1rem;
+}
+
+.back {
+    border: 3px solid #79f859;
+    height: 1rem;
+    width: fit-content;
+    padding: 1rem 2rem;
+    border-radius: 10px;
+    background-color: #79f859;
+    opacity: .8;
+}
+
+.back:hover {
+    cursor: pointer;
+    opacity: 1;
 }
