--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@ body {
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
     margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 @keyframes fadeInAnimation {
@@ -286,7 +287,8 @@ body {
     border-radius: 20px;
     padding: 1rem;
     margin: 1rem 0;
-    max-width: 500px;
+    min-width: 600px;
+    max-width: 600px;
 }
 
 img {
@@ -316,7 +318,7 @@ img {
 }
 
 .comments_button {
-    width: 9rem;
+    width: 10rem;
     text-align: center;
     padding: 0.2rem;
     border: 4px solid #79f859;
@@ -398,4 +400,42 @@ img {
 .back:hover {
     cursor: pointer;
     opacity: 1;
+}
+
+.posts_heading {
+    text-align: center;
+    font-size: xx-large;
+    font-weight: 700;
+}
+
+.delete_container {
+    margin-top: 1rem;
+    width: 6rem;
+    text-align: center;
+    padding: 0.2rem;
+    border-radius: 10px;
+    background-color: #f3432b;
+    opacity: 0.8;
+    color: #fff;
+}
+
+.delete_container:hover {
+    cursor: pointer;
+    opacity: 1;
+}
+
+.logo {
+    width: 5rem;
+}
+
+.logo_container {
+    display: flex;
+    align-items: center;
+}
+
+.app_name {
+    font-size: xx-large;
+    font-weight: 700;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: black;
 }
