--- a/src/App.css
+++ b/src/App.css
@@ -439,3 +439,13 @@ img {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: black;
 }
+
+.home_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.subhead {
+    font-size: large;
+}
